apps/default-404/http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airbyte
  namespace: airbyte
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames:
    - "airbyte.bergtobias.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: airbyte-airbyte-server-svc
          port: 8001
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/connector_builder
      backendRefs:
        - name: airbyte-airbyte-connector-builder-server-svc
          port: 80
