apps/default-404/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-404
spec:
  selector:
    app: default-404
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-404
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-404
  template:
    metadata:
      labels:
        app: default-404
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m # reserve minimal CPU
              memory: 32Mi # reserve minimal memory
            limits:
              cpu: 100m # max 0.1 core
              memory: 64Mi # max 64 MB RAM
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: default-404-html

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-404
  namespace: default
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system # same Gateway your airflow route uses
  hostnames:
    - "*.bergtobias.com" # catch all hosts
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: default-404
          port: 80
